# EVE-MCU-BRT_AN_025

./: .gitignore  README.md
examples/BRT_AN_062_Source/NXP_K64/SPI_GPIO_Test/: .cproject  .project
examples/BRT_AN_074_Source/BRT_AN_074_Color_Picker_Examples/: .cproject
examples/BRT_AN_074_Source/BRT_AN_074_Color_Picker_Examples/FT90x_Debug/: makefile  objects.mk  sources.mk
examples/BRT_AN_074_Source/BRT_AN_074_Color_Picker_Examples/example/: eve_example.c
examples/BRT_AN_074_Source/BRT_AN_074_Color_Picker_Examples/main/: main.c
examples/BRT_AN_074_Source/FT9XX/BRT_AN_074_Color_Picker_Examples/: .cproject.txt  .project
examples/BRT_AN_074_Source/images/Circular_1555/: Color_Wheel_250x250_ARGB1555.json  Color_Wheel_250x250_ARGB1555.raw  Color_Wheel_250x250_ARGB1555.rawh
examples/BRT_AN_074_Source/images/Frog_Paletted8/: Frog_602x401_PALETTED8.json  Frog_602x401_PALETTED8_index.raw  Frog_602x401_PALETTED8_index.rawh
examples/BRT_AN_074_Source/images/Square_1555/: Color_Picker_Square_790x470_ARGB1555.json  Color_Picker_Square_790x470_ARGB1555.raw  (+1 more)
examples/simple/BeagleBone/: Makefile
examples/simple/ESP32/: .cproject  .project  CMakeLists.txt  sdkconfig
examples/simple/MPS430/: .cproject
examples/simple/MSP430/: .ccsproject  .cproject  .project
examples/simple/NXP_K64/: .cproject  .project
examples/simple/STM32/: .gitignore
examples/simple/STM32CUBE/: .cproject  .gitignore  .mxproject  .project  BRT_AN_025_STM32CUBE.cfg  BRT_AN_025_STM32CUBE.ioc  BRT_AN_025_STM32CUBE.launch  STM32F030R8TX_FLASH.ld
examples/simple/common/: eve_calibrate.c  eve_example.c  eve_fonts.c  eve_helper.c  eve_images.c
examples/simple/ft900/: .cproject  .gitignore  .project
examples/simple/libft4222/: .gitignore  Makefile  ReadMe.txt  main.c
examples/simple/libmpsse/: .gitignore  Makefile  ReadMe.txt  libmpsse.code-workspace  main.c
examples/simple/pico/: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pico.code-workspace
examples/simple/pico/main/: main.c
examples/simple/raspberry_pi/: .cproject  .gitignore  .project  Makefile
include/: BT81x.h  BT82x.h  EVE.h  EVE_config.h  FT80x.h  FT81x.h  FT8xx.h  HAL.h  MCU.h  Platform.h
ports/eve_arch_beaglebone/: EVE_Linux_BBB.c
ports/eve_arch_esp32/: CMakeLists.txt  EVE_MCU_ESP32.c
ports/eve_arch_ft9xx/: EVE_MCU_FT9XX.c
ports/eve_arch_msp430/: EVE_MCU_MSP430.c
ports/eve_arch_nxpk64/: EVE_MCU_NXP.c
ports/eve_arch_pic/: EVE_MCU_PIC.c
ports/eve_arch_rpi/: EVE_Linux_RPi.c  EVE_MCU_RP2040.c
ports/eve_arch_stm32/: EVE_MCU_STM32.c
ports/eve_arch_stm32cube/: EVE_MCU_STM32CUBE.c
ports/eve_libft4222/: EVE_libft4222.c
ports/eve_libmpsse/: EVE_libmpsse.c
source/: EVE_API.c  EVE_HAL.c  EVE_HAL_Linux.c
(+121 files in other folders)
